Disabled doclint for Javadoc im pom.xml; configured main-branch in Github workflow release.yaml

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,8 @@ permissions:
 jobs:
   release:
     uses: reallifedeveloper/github-workflows/.github/workflows/maven-release.yaml@main
+    with:
+      main-branch: master
     secrets: inherit
     permissions:
       contents: write
